--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,5 +1,10 @@
-p= answer.body 
+p= answer.body
 
-- if current_user&.author?(answer) 
-  = button_to "Delete answer", answer_path(answer), method: :delete 
+- if user_signed_in?
+  p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+
+= form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
+  = f.label :body, 'Your answer'
+  = f.text_area :body
+  = f.submit 'Save' 
   
