--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,1 +1,11 @@
-=render 'form'
+= render 'shared/errors', resource: @question
+
+= form_with model: @question, local: true do |f|
+  p
+    = f.label :title
+    = f.text_field :title
+  p
+    = f.label :body
+    = f.text_area :body
+  p= f.submit 'Ask' 
+  
