--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,24 @@
-h1= @question.title
-p= @question.body
+.question-title 
+  h1= @question.title
+.question-body
+  p= @question.body
+.question 
+  -if current_user&.author?(@question) 
+    = link_to "Edit question", #, class: "edit-question-link", data: {question_id: question.id}
+.question-errors 
+  = render 'shared/errors', resource: @question
+
+= form_with model: @question, class: 'hidden', html: { id: edit-question-#{@question.id}, local: false do |f|
+  = f.label :title
+  = f.text_field :title
+  = f.label :body
+  = f.text_area :body
+  = f.submit 'Save'
+
+h1= Answers 
 
 .answers
+- if user_signet_in?
   = render @question.answers
 
 .answer-errors
