--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,12 @@
 .question-title 
   h1= @question.title
 .question-body
-  p= @question.body
+  p= @question.body 
+
+- if @question.files.attached?
+  - @question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file) 
+    
 .question 
   -if current_user&.author?(@question) 
     = link_to "Edit question", #, class: "edit-question-link", data: {question_id: question.id}
