--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -15,6 +15,8 @@ div class = "answer-#{answer.id}
   = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
     = f.label :body, 'Your answer'
     = f.text_area :body
+    = f.label :files 
+    = f.file_field :files; multiple: true
     = f.submit 'Save' 
 
   -if current_user&.author?(answer.question) && !answer.best? 
