--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -18,7 +18,12 @@
   = f.text_field :title
   = f.label :body
   = f.text_area :body
-  = f.submit 'Save'
+  = f.label :files 
+  = f.file_field :files, multiple: true
+  = f.submit 'Save' 
+
+.attachment 
+  = render 'shared/attachment', resource: @question
 
 h1= Answers 
 
@@ -31,5 +36,7 @@ h1= Answers
 = form_with model: [@question, @answer], class: 'new-answer' do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
+  = f.label :files 
+  = f.file_field :files, multiple: true
   = f.submit 'Create'
   
