--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -5,7 +5,13 @@ div class = "answer-#{answer.id}
       p= answer.body 
   else 
     h4= 'Answer' 
-    p= answer.body 
+    p= answer.body  
+
+  .links
+  p Links:
+  ul
+    - answer.links.each do |link|
+      li= link_to link.name, link.url
 
   -if current_user&.author?(answer) 
     p= link_to "Delete answer", answer_path(answer). method: :delete, remote: true 
