--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,6 +6,12 @@
 - if @question.files.attached?
   - @question.files.each do |file|
     p= link_to file.filename.to_s, url_for(file) 
+
+.links
+  p Links:
+  ul
+    - @question.links.each do |link|
+      li= link_to link.name, link.url
     
 .question 
   -if current_user&.author?(@question) 
@@ -37,6 +43,16 @@ h1= Answers
   = f.label :body, 'Your answer'
   = f.text_area :body
   = f.label :files 
-  = f.file_field :files, multiple: true
+  = f.file_field :files, multiple: true 
+
+  p Links:
+  p
+    = f.fields_for :links do |l|
+      p
+        = l.label :name, 'Link name'
+        = l.text_field :name
+      p
+        = l.label :url
+        = l.text_field :url
   = f.submit 'Create'
   
