--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -19,15 +19,7 @@
 .question-errors 
   = render 'shared/errors', resource: @question
 
-= form_with model: @question, class: 'hidden', html: { id: edit-question-#{@question.id}, local: false do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :body
-  = f.text_area :body
-  = f.label :files 
-  = f.file_field :files, multiple: true
-  = f.submit 'Save' 
-
+  = render "edit_form"
 .attachment 
   = render 'shared/attachment', resource: @question
 
@@ -39,12 +31,7 @@ h1= Answers
 
 .answer-errors
   = render 'shared/errors', resource: @answer
-= form_with model: [@question, @answer], class: 'new-answer' do |f|
-  = f.label :body, 'Your answer'
-  = f.text_area :body
-  = f.label :files 
-  = f.file_field :files, multiple: true 
-
+  = render "answers/form"
   p Links:
   p
     = f.fields_for :links do |l|
