--- a/app/views/questions/_edit_form.html.slim
+++ b/app/views/questions/_edit_form.html.slim
@@ -10,4 +10,11 @@
     = f.label :files
     = f.file_field :files, multiple: true 
 
+  p Links:
+  p
+    = f.fields_for :links do |l|
+      = render "shared/link_fields", f: link 
+    .link 
+      = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
+
   p= f.submit 'Save' 
