--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -6,16 +6,8 @@ div class = "answer-#{answer.id}
   else 
     h4= 'Answer' 
     p= answer.body 
-    .links 
-    - if answer.link.present? 
-    p links: 
-    ul 
-      -answer.links.each do |link| 
-      li= link_to link.name, link url 
-      - if link.gist_link? 
-      script src="#{link.url}.js"
-      -else 
-      li= link_to link.name, link.url
+
+  = render 'shared/links', resource: answer
 
   -if current_user&.author?(answer) 
     p= link_to "Delete answer", answer_path(answer). method: :delete, remote: true 
@@ -27,6 +19,13 @@ div class = "answer-#{answer.id}
     = f.text_area :body
     = f.label :files 
     = f.file_field :files; multiple: true
+  
+  p
+  = f.fields_for :links do |l|
+    = render "shared/link_fields", f: link 
+  .link 
+    = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
+
     = f.submit 'Save'  
 
   = render 'shared/attachment', resource: answer
