--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,6 +3,8 @@
 .question-body
   p= @question.body 
 
+= render 'shared/voting', resource: @question
+
 - if @question.files.attached?
   - @question.files.each do |file|
     p= link_to file.filename.to_s, url_for(file) 
