--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,9 @@
-- if user_signed_in?
-  p= render @questions
-
-  p= link_to 'Ask question', new_question_path 
+- if user_signed_in? 
+  = link_to 'Ask question', new_question_path, class: 'btn btn-primary'
+hr
+.questions-list.collection
+  - if @questions.any?
+    = render @questions
+  - else
+    div
+      .col.s6.offset-s3.center No questions found
