--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,16 +5,6 @@
 
 = render 'shared/voting', resource: @question
 
-- if @question.files.attached?
-  - @question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file) 
-
-.links
-  p Links:
-  ul
-    - @question.links.each do |link|
-      li= link_to link.name, link.url
- 
 .question 
   -if current_user&.author?(@question) 
     = link_to "Edit question", #, class: "edit-question-link", data: {question_id: question.id}
@@ -25,6 +15,10 @@
 .attachment 
   = render 'shared/attachment', resource: @question
 
+.question
+  div class="question-#{@question.id}-comments"
+    = render 'comments/comments', resource: @question
+
 h1= Answers 
 
 .answers
@@ -34,14 +28,4 @@ h1= Answers
 .answer-errors
   = render 'shared/errors', resource: @answer
   = render "answers/form"
-  p Links:
-  p
-    = f.fields_for :links do |l|
-      p
-        = l.label :name, 'Link name'
-        = l.text_field :name
-      p
-        = l.label :url
-        = l.text_field :url
-  = f.submit 'Create'
   
