--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,4 @@
-- if user_signed_in? 
+- if can?(:create, Question)
   = link_to 'Ask question', new_question_path, class: 'btn btn-primary'
 hr
 .questions-list.collection
