auth with tests

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,7 +6,7 @@
 = render 'shared/voting', resource: @question
 
 .question 
-  -if current_user&.author?(@question) 
+  - if can?(:update, @question) 
     = link_to "Edit question", #, class: "edit-question-link", data: {question_id: question.id}
 .question-errors 
   = render 'shared/errors', resource: @question
@@ -22,7 +22,7 @@
 h1= Answers 
 
 .answers
-- if user_signet_in?
+- if can?(:create, Answer)
   = render @question.answers
 
 .answer-errors
