--- a/app/views/daily_digest_mailer/digest.html.slim
+++ b/app/views/daily_digest_mailer/digest.html.slim
@@ -1,2 +1,3 @@
-h1 DailyDigest#digest
-p = "#{@greeting}, find me in app/views/daily_digest_mailer/digest.html.slim"
+ul
+  - @questions.each do |question|
+    li = question.title
